# Course_work_3_-project_operations-

./: README.md  pyproject.toml  test.info.txt
src/: main.py  utils_accounts.py  utils_dates.py  utils_json.py
tests/: test_utils_accounts.py  test_utils_dates.py  test_utils_json.py
